# repo_template

./: .gitignore  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/hooks/: pre-commit
.github/workflows/: black.yaml  isort.yaml  mypy.yaml  pytest.yaml  ruff.yaml  safety.yaml
envs/: .env.template
